crates/sui-prover/tests/snapshots/vector/singleton.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 303
expression: output
---
Verification successful
warning: deprecated usage
  ┌─ tests/inputs/vector/singleton.move:8:13
  │
8 │     vector::singleton(e)
  │             ^^^^^^^^^ The function 'std::vector::singleton' is deprecated: Use `vector[e]` literal instead
  │
  = This warning can be suppressed with '#[allow(deprecated_usage)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning: deprecated usage
   ┌─ tests/inputs/vector/singleton.move:16:21
   │
16 │     ensures(vector::singleton(e) == r);
   │                     ^^^^^^^^^ The function 'std::vector::singleton' is deprecated: Use `vector[e]` literal instead
   │
   = This warning can be suppressed with '#[allow(deprecated_usage)]' applied to the 'module' or module member ('const', 'fun', or 'struct')
